#432: Added object and queries for Item Delivery Types