@@ -17,41 +17,49 @@
 package com.echothree.control.user.item.server.command;
 
 import com.echothree.control.user.item.common.form.GetItemDeliveryTypesForm;
-import com.echothree.control.user.item.common.result.GetItemDeliveryTypesResult;
 import com.echothree.control.user.item.common.result.ItemResultFactory;
 import com.echothree.model.control.item.server.control.ItemControl;
+import com.echothree.model.data.item.server.entity.ItemDeliveryType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetItemDeliveryTypesCommand
-        extends BaseSimpleCommand<GetItemDeliveryTypesForm> {
-    
+        extends BaseMultipleEntitiesCommand<ItemDeliveryType, GetItemDeliveryTypesForm> {
+
+    // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of(
+        );
     }
-    
+
     /** Creates a new instance of GetItemDeliveryTypesCommand */
     public GetItemDeliveryTypesCommand(UserVisitPK userVisitPK, GetItemDeliveryTypesForm form) {
         super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<ItemDeliveryType> getEntities() {
         var itemControl = Session.getModelController(ItemControl.class);
-        GetItemDeliveryTypesResult result = ItemResultFactory.getGetItemDeliveryTypesResult();
-        
-        result.setItemDeliveryTypes(itemControl.getItemDeliveryTypeTransfers(getUserVisit()));
-        
+
+        return itemControl.getItemDeliveryTypes();
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<ItemDeliveryType> entities) {
+        var result = ItemResultFactory.getGetItemDeliveryTypesResult();
+        var itemControl = Session.getModelController(ItemControl.class);
+        var userVisit = getUserVisit();
+
+        result.setItemDeliveryTypes(itemControl.getItemDeliveryTypeTransfers(userVisit, entities));
+
         return result;
     }
-    
+
 }
